# origin

./: .gitignore  CMakeLists.txt  README.md  build.sh
assets/models/: download-sponza.sh
assets/models/statue/: SnakeStatue.mtl
assets/scenes/: sponza.json
assets/shaders/: frag.glsl  post_frag.glsl  post_vert.glsl  vert.glsl
assets/shaders/skybox/: skybox_frag.glsl  skybox_vert.glsl
assets/textures/skybox/: README.md
engine/: CMakeLists.txt
engine/cmake/: assimp.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  nlohmann_json.cmake  sdl2.cmake  spdlog.cmake  stb.cmake
engine/include/: engine.h
engine/include/engine/: camera.h  engine.h  entity.h  math.h  mesh.h  model.h  shader.h  texture.h  transform.h  window.h
engine/include/engine/components/: camera.h  component.h  entity.h  renderer.h  skybox.h
engine/include/engine/debug/: logger.h  path.h
engine/include/engine/input/: input.h  keycodes.h
engine/include/engine/scene/: scene.h  sceneManager.h
engine/src/: camera.cpp  engine.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  window.cpp
engine/src/components/: camera.cpp  renderer.cpp  skybox.cpp
engine/src/debug/: logger.cpp
engine/src/input/: input.cpp
engine/src/scene/: scene.cpp  sceneManager.cpp
game/: CMakeLists.txt
game/src/: main.cpp
game/web/: shell.html
sandbox/: CMakeLists.txt
sandbox/include/: layer.h
sandbox/resources/: layout.ini
sandbox/src/: layer.cpp  main.cpp
